fix h3 letterspacing

--- a/frontend/source/sass/base/_typography.scss
+++ b/frontend/source/sass/base/_typography.scss
@@ -22,6 +22,7 @@ h2 {
 h3 {
   font-size: $h3-font-size;
   font-weight: $font-weight-bold;
+  letter-spacing: -0.02rem; /* Skeleton override */
 }
 
 h4 {
